[package]
name = "curve"
version = "0.1.0"
authors = ["Tuhin Nair <tuhinnair444@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
heck = "0.3.1"
log = "0.4.11"
pretty_env_logger = "0.4.0"
serde = {version="1.0.114",features=["derive"]}
serde_json = "1.0.57"
reqwest = {version="0.10.7", features=["json", "blocking", "cookies"] }
rpassword = "4.0.5"
futures = "0.3.5"
url = "2.1.1"
dirs = "3.0.1"
lazy_static = "1.4.0"
toml = "0.5.6"


